added more javascript to display the first question/answers

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="answer3">Answer 3</button>
         <button id="answer4">Answer 4</button>
     </div>
+    <button id="nextbutton"></button>
     <button>Start Quiz</button>
     <script src="assets/script.js"></script>
 </body>
