added more JS functions to load questions and to check answers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>Code Quiz</h1>
-    <p>View High Scores</p>
     <div id="question"></div>
+    <div id="result"></div>
     <div id="answer-buttons">
         <button id="answer1">Answer 1</button>
         <button id="answer2">Answer 2</button>
@@ -18,7 +18,7 @@
         <button id="answer4">Answer 4</button>
     </div>
     <button id="nextbutton"></button>
-    <button>Start Quiz</button>
+    <button id="startquiz">Start Quiz</button>
     <script src="assets/script.js"></script>
 </body>
 
