--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Code Quiz</title>
+    <link rel="stylesheet" href="assets/style.css" />
 </head>
 
 <body>
-    <h1>Code Quiz</h1>
-    <div id="question"></div>
-    <div id="result"></div>
-    <div id="answer-buttons">
-        <button id="answer1">Answer 1</button>
-        <button id="answer2">Answer 2</button>
-        <button id="answer3">Answer 3</button>
-        <button id="answer4">Answer 4</button>
+    <div class="main">
+        <h1>Code Quiz</h1>
+        <div id="question"></div>
+        <div id="result">Number Correct: <div id="numberCorrect"></div></div>
+        <div id="answer-buttons">
+            <button id="answer1">Answer 1</button>
+            <button id="answer2">Answer 2</button>
+            <button id="answer3">Answer 3</button>
+            <button id="answer4">Answer 4</button>
+        </div>
+        <button id="startquiz">Start Quiz</button>
+        <script src="assets/script.js"></script>
     </div>
-    <button id="nextbutton"></button>
-    <button id="startquiz">Start Quiz</button>
-    <script src="assets/script.js"></script>
 </body>
 
 </html>
