made it so elements hide before starting quiz

--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 <body>
     <div class="main ">
         <h1>Code Quiz</h1>
+        <div id="time-container">
+            <div id="timeleft">Time Left: </div>
+            <div id="timer"></div>
+        </div>
         <div id="question"></div>
-        <div id="result">Number Correct: <div id="numberCorrect"></div></div>
+        <div id="result">Number Correct: <div id="numberCorrect"></div>
+        </div>
         <div id="answer-buttons">
             <button id="answer1">Answer 1</button>
             <button id="answer2">Answer 2</button>
