added high score functionality

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <button id="answer4">Answer 4</button>
         </div>
         <button id="startquiz">Start Quiz</button>
+        <div id="highscore"></div>
+        <button id="showhs">Save High Score</button>
         <script src="assets/script.js"></script>
     </div>
 </body>
