--- a/index.html
+++ b/index.html
@@ -11,21 +11,28 @@
 <body>
     <div class="main ">
         <h1>Code Quiz</h1>
+        <!-- Timer -->
         <div id="time-container">
             <div id="timeleft">Time Left: </div>
             <div id="timer"></div>
         </div>
+        <!--Question field-->
         <div id="question"></div>
+        <!--Field which keeps track of score-->
         <div id="result">Number Correct: <div id="numberCorrect"></div>
         </div>
+        <!--Answer buttons-->
         <div id="answer-buttons">
             <button id="answer1">Answer 1</button>
             <button id="answer2">Answer 2</button>
             <button id="answer3">Answer 3</button>
             <button id="answer4">Answer 4</button>
         </div>
+        <!--Start quiz button-->
         <button id="startquiz">Start Quiz</button>
+        <!--Field to display high score from local storage-->
         <div id="highscore"></div>
+        <!--Button to prompt app to save/display high score-->
         <button id="showhs">Save High Score</button>
         <script src="assets/script.js"></script>
     </div>
